# Diabetes_predictionmodel

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Deployment/: app.py
diabetes_predictionmodel.egg-info/: PKG-INFO  SOURCES.txt
src/: data_ingestion.py  data_preprocessing.py  model_building.py
src/diabetes_predictionmodel.egg-info/: SOURCES.txt  requires.txt
